--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </section>
 
       <!--Наши преимущества-->
-      <section class="container section-padding">
+      <section class="container advantages-padding">
         <h2 hidden>Наши преимущества</h2>
         <ul class="advantages list flex">
           <li class="flex-advantages">
@@ -197,11 +197,11 @@
                 ><img
                   src="./images/our-team/igor.jpg"
                   alt="фото Игоря Демьяненко"
-                  width="270"
+                  width="270px"
               /></a>
               <h3 class="heading-team">Игорь Демьяненко</h3>
               <p class="desc">Product Designer</p>
-              <ul class="flex list icon-ul">
+              <ul class="flex-mobile-desktop list icon-ul">
                 <li class="icon-list">
                   <a class="icon-social-list" href="#">
                     <svg class="icon-social">
@@ -237,11 +237,11 @@
                 ><img
                   src="./images/our-team/olga.jpg"
                   alt="фото Ольги Репиной"
-                  width="270"
+                  width="270px"
               /></a>
               <h3 class="heading-team">Ольга Репина</h3>
               <p class="desc">Frontend Developer</p>
-              <ul class="flex list icon-ul">
+              <ul class="flex-mobile-desktop list icon-ul">
                 <li class="icon-list">
                   <a class="icon-social-list" href="#">
                     <svg class="icon-social">
@@ -277,11 +277,11 @@
                 ><img
                   src="./images/our-team/nikolay.jpg"
                   alt="фото Николая Тарасова"
-                  width="270"
+                  width="270px"
               /></a>
               <h3 class="heading-team">Николай Тарасов</h3>
               <p class="desc">Marketing</p>
-              <ul class="flex list icon-ul">
+              <ul class="flex-mobile-desktop list icon-ul">
                 <li>
                   <a class="icon-social-list" href="#">
                     <svg class="icon-social">
@@ -317,11 +317,11 @@
                 ><img
                   src="./images/our-team/mickael.jpg"
                   alt="фото Михаила Ермакова"
-                  width="270"
+                  width="270px"
               /></a>
               <h3 class="heading-team">Михаил Ермаков</h3>
               <p class="desc">UI Designer</p>
-              <ul class="flex list icon-ul">
+              <ul class="flex-mobile-desktop list icon-ul">
                 <li class="icon-list">
                   <a class="icon-social-list" href="#">
                     <svg class="icon-social">
@@ -356,18 +356,18 @@
         </div>
       </section>
       <!-- Постоянные клиенты -->
-      <section class="section-padding">
+      <section class="clients-padding">
         <div class="container">
           <h2 class="heading">Постоянные клиенты</h2>
-          <ul class="list flex">
-            <li>
+          <ul class="list clients-wrap flex-mobile-desktop">
+            <li class="clients-li">
               <a class="logo-container" href="">
                 <svg class="icon-logo" width="42px" height="49px">
                   <use href="./images/svg/sprite.svg#icon-logo-one"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-li">
               <a class="logo-container" href="">
                 <svg class="icon-logo" width="40px" height="52px">
                   <use href="./images/svg/sprite.svg#icon-logo-two"></use>
@@ -375,28 +375,28 @@
               </a>
             </li>
 
-            <li>
+            <li class="clients-li">
               <a class="logo-container" href="">
                 <svg class="icon-logo" width="41px" height="43px">
                   <use href="./images/svg/sprite.svg#icon-logo-three"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-li">
               <a class="logo-container" href="">
                 <svg class="icon-logo" width="80px" height="42px">
                   <use href="./images/svg/sprite.svg#icon-logo-four"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-li">
               <a class="logo-container" href="">
                 <svg class="icon-logo" width="59px" height="47px">
                   <use href="./images/svg/sprite.svg#icon-logo-five"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-li">
               <a class="logo-container" href="">
                 <svg class="icon-logo" width="89px" height="46px">
                   <use href="./images/svg/sprite.svg#icon-logo-six"></use>
@@ -423,7 +423,7 @@
           <p class="footer-p heading-uppercase heading-uppercase-white">
             присоединяйтесь
           </p>
-          <ul class="flex list">
+          <ul class="flex-mobile-desktop list">
             <li class="footer-space-icon">
               <a class="icon-footer-list" href="#">
                 <svg class="icon-social">
