--- a/portfolio.html
+++ b/portfolio.html
@@ -302,7 +302,7 @@
           <p class="footer-p heading-uppercase heading-uppercase-white">
             присоединяйтесь
           </p>
-          <ul class="flex list">
+          <ul class="flex-mobile-desktop list">
             <li class="footer-space-icon">
               <a class="icon-footer-list" href="#">
                 <svg class="icon-social">
