--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <section class="ourteam section-padding">
         <div class="container">
           <h2 class="heading">Наша команда</h2>
-          <ul class="list flex">
+          <ul class="list ourteam-wrap flex">
             <li class="ourteam-back">
               <a href="#"
                 ><img
@@ -201,7 +201,7 @@
               /></a>
               <h3 class="heading-team">Игорь Демьяненко</h3>
               <p class="desc">Product Designer</p>
-              <ul class="flex-mobile-desktop list icon-ul">
+              <ul class="list icon-ul">
                 <li class="icon-list">
                   <a class="icon-social-list" href="#">
                     <svg class="icon-social">
