--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-flex">
-        <div>
+        <div class="footer-address-logo">
           <a lang="en" href="./index.html" class="logo footer-logo link"
             ><span class="web">Web</span>Studio</a
           >
@@ -423,7 +423,7 @@
           <p class="footer-p heading-uppercase heading-uppercase-white">
             присоединяйтесь
           </p>
-          <ul class="flex-mobile-desktop list">
+          <ul class="footer-icon-ul list">
             <li class="footer-space-icon">
               <a class="icon-footer-list" href="#">
                 <svg class="icon-social">
