--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
           <a lang="en" href="./index.html" class="logo link"
             ><span class="web">Web</span>Studio</a
           >
+          <!-- кнопка мобильной версии хедера -->
+          <button type="button" class="button-header-mobile">
+            <svg
+              class="icon-menu-mobile"
+              width="40px"
+              height="40px"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                href="./images/svg/sprite-menu-mobile.svg#icon-menu-mobile"
+              ></use>
+              <use
+                href="./images/svg/sprite-menu-mobile.svg#icon-menu-close-mobile"
+              ></use>
+            </svg>
+          </button>
+
+          <!-- таблетка и десктоп -->
           <ul class="site-nav list">
             <li class="space">
               <a href="./index.html" class="link current link-push-line"
@@ -188,8 +206,8 @@
         </ul>
       </section>
       <!--Наши специалисты-->
-      <section class="ourteam section-padding">
-        <div class="container">
+      <section class="ourteam">
+        <div class="container section-padding">
           <h2 class="heading">Наша команда</h2>
           <ul class="list ourteam-wrap flex">
             <li class="ourteam-back">
@@ -356,8 +374,8 @@
         </div>
       </section>
       <!-- Постоянные клиенты -->
-      <section class="clients-padding">
-        <div class="container">
+      <section>
+        <div class="container clients-padding">
           <h2 class="heading">Постоянные клиенты</h2>
           <ul class="list clients-wrap flex-mobile-desktop">
             <li class="clients-li">
