--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <!-- <link rel="stylesheet" href="./CSS/style.css" /> -->
   </head>
 
-  <body>
+  <body class="body">
     <!-- Шапка сайта -->
     <header class="header">
       <div class="container flex header-center">
@@ -31,6 +31,31 @@
           <a lang="en" href="./index.html" class="logo link"
             ><span class="web">Web</span>Studio</a
           >
+          <!-- кнопка мобильной версии хедера -->
+          <button
+            type="button"
+            class="button-header-mobile is-open-header-menu"
+            aria-expanded="false"
+            data-menu-button
+          >
+            <svg
+              width="40px"
+              height="40px"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-menu-mobile"
+                href="./images/svg/sprite-menu-mobile.svg#icon-menu-mobile"
+              ></use>
+              <use
+                class="icon-menu-close-mobile"
+                href="./images/svg/sprite-menu-mobile.svg#icon-menu-close-mobile"
+              ></use>
+            </svg>
+          </button>
+
+          <!-- таблетка и десктоп -->
+
           <ul class="site-nav list">
             <li class="space">
               <a href="./index.html" class="link">Студия</a>
@@ -47,7 +72,7 @@
         </nav>
 
         <ul class="contacts list">
-          <li>
+          <li class="contacts-li">
             <a href="mailto:info@devstudio.com" class="link contacts-position"
               ><svg class="icon-contacts" width="16" height="12">
                 <use href="./images/svg/sprite.svg#icon-envelope"></use>
@@ -55,8 +80,8 @@
               info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="link contacts-position"
+          <li class="contacts-li">
+            <a href="tel:+380961111111" class="link blue contacts-position"
               ><svg class="icon-contacts" width="10" height="16">
                 <use href="./images/svg/sprite.svg#icon-phone"></use>
               </svg>
