--- a/portfolio.html
+++ b/portfolio.html
@@ -26,71 +26,81 @@
   <body class="body">
     <!-- Шапка сайта -->
     <header class="header">
-      <div class="container flex header-center">
-        <nav class="nav-flex">
-          <a lang="en" href="./index.html" class="logo link"
-            ><span class="web">Web</span>Studio</a
+      <div class="container header-center">
+        <a lang="en" href="./index.html" class="logo link"
+          ><span class="web">Web</span>Studio</a
+        >
+        <!-- кнопка мобильной версии хедера -->
+        <button
+          type="button"
+          class="button-header-mobile"
+          aria-expanded="false"
+          aria-controls="div-nav-contacts"
+          data-menu-button
+        >
+          <svg
+            width="40px"
+            height="40px"
+            aria-label="Переключатель мобильного меню"
           >
-          <!-- кнопка мобильной версии хедера -->
-          <button
-            type="button"
-            class="button-header-mobile is-open-header-menu"
-            aria-expanded="false"
-            data-menu-button
-          >
-            <svg
-              width="40px"
-              height="40px"
-              aria-label="Переключатель мобильного меню"
-            >
-              <use
-                class="icon-menu-mobile"
-                href="./images/svg/sprite-menu-mobile.svg#icon-menu-mobile"
-              ></use>
-              <use
-                class="icon-menu-close-mobile"
-                href="./images/svg/sprite-menu-mobile.svg#icon-menu-close-mobile"
-              ></use>
-            </svg>
-          </button>
+            <use
+              class="icon-menu-mobile"
+              href="./images/svg/sprite-menu-mobile.svg#icon-menu-mobile"
+            ></use>
+            <use
+              class="icon-menu-close-mobile"
+              href="./images/svg/sprite-menu-mobile.svg#icon-menu-close-mobile"
+            ></use>
+          </svg>
+        </button>
 
-          <!-- таблетка и десктоп -->
+        <!-- таблетка и десктоп -->
+        <div class="div-nav-contacts" id="div-nav-contacts" data-menu>
+          <nav class="nav-flex">
+            <ul class="site-nav list">
+              <li class="space">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="space">
+                <a href="./portfolio.html" class="link current link-push-line"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="space">
+                <a href="" class="link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
 
-          <ul class="site-nav list">
-            <li class="space">
-              <a href="./index.html" class="link">Студия</a>
-            </li>
-            <li class="space">
-              <a href="./portfolio.html" class="link current link-push-line"
-                >Портфолио</a
+          <ul class="contacts list">
+            <li class="contacts-li">
+              <a href="mailto:info@devstudio.com" class="link contacts-position"
+                ><svg class="icon-contacts" width="16" height="12">
+                  <use href="./images/svg/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
-            <li class="space">
-              <a href="" class="link">Контакты</a>
+            <li class="contacts-li">
+              <a href="tel:+380961111111" class="link blue contacts-position"
+                ><svg class="icon-contacts" width="10" height="16">
+                  <use href="./images/svg/sprite.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
-        </nav>
 
-        <ul class="contacts list">
-          <li class="contacts-li">
-            <a href="mailto:info@devstudio.com" class="link contacts-position"
-              ><svg class="icon-contacts" width="16" height="12">
-                <use href="./images/svg/sprite.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-li">
-            <a href="tel:+380961111111" class="link blue contacts-position"
-              ><svg class="icon-contacts" width="10" height="16">
-                <use href="./images/svg/sprite.svg#icon-phone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+          <ul class="header-mobile-social">
+            <li><a href="#"></a>Instagram</li>
+            <li><a href="#"></a>Twitter</li>
+            <li><a href="#"></a>Facebook</li>
+            <li><a href="#"></a>LinkedIn</li>
+          </ul>
+        </div>
       </div>
     </header>
+
     <!-- Основной контент -->
     <main>
       <section class="gallery container section-padding">
@@ -383,5 +393,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu-mobile.js"></script>
   </body>
 </html>
