--- a/index.html
+++ b/index.html
@@ -71,31 +71,41 @@
             </ul>
           </nav>
 
-          <ul class="contacts list">
-            <li class="contacts-li">
-              <a href="mailto:info@devstudio.com" class="link contacts-position"
-                ><svg class="icon-contacts" width="16" height="12">
-                  <use href="./images/svg/sprite.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts-li">
-              <a href="tel:+380961111111" class="link blue contacts-position"
-                ><svg class="icon-contacts" width="10" height="16">
-                  <use href="./images/svg/sprite.svg#icon-phone"></use>
-                </svg>
-                +38 096 111 11 11</a
-              >
-            </li>
-          </ul>
+          <div class="mobile-end-window">
+            <ul class="contacts list">
+              <li class="contacts-li">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="link contacts-position"
+                  ><svg class="icon-contacts" width="16" height="12">
+                    <use href="./images/svg/sprite.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts-li">
+                <a href="tel:+380961111111" class="link blue contacts-position"
+                  ><svg class="icon-contacts" width="10" height="16">
+                    <use href="./images/svg/sprite.svg#icon-phone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
 
-          <ul class="list header-mobile-social header-mobile-social-text">
-            <li class="header-mobile-social-list"><a href="#"></a>Instagram</li>
-            <li class="header-mobile-social-list"><a href="#"></a>Twitter</li>
-            <li class="header-mobile-social-list"><a href="#"></a>Facebook</li>
-            <li class="header-mobile-social-list"><a href="#"></a>LinkedIn</li>
-          </ul>
+            <ul class="list header-mobile-social header-mobile-social-text">
+              <li class="header-mobile-social-list">
+                <a href="#"></a>Instagram
+              </li>
+              <li class="header-mobile-social-list"><a href="#"></a>Twitter</li>
+              <li class="header-mobile-social-list">
+                <a href="#"></a>Facebook
+              </li>
+              <li class="header-mobile-social-list">
+                <a href="#"></a>LinkedIn
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -181,9 +191,9 @@
           <li class="whatwedo-list">
             <a href="#"
               ><img
+                class="img"
                 src="./images/keyboards.jpg"
                 alt="Печатает на клавиатуре"
-                width="370"
             /></a>
             <div
               class="whatwedo-name-position heading-uppercase heading-uppercase-white whatwedo-name-text"
@@ -194,9 +204,9 @@
           <li class="whatwedo-list">
             <a href="#"
               ><img
+                class="img"
                 src="./images/lookatthephone.jpg"
                 alt="Смотрит на телефон и на экран"
-                width="370"
             /></a>
             <div
               class="whatwedo-name-position heading-uppercase heading-uppercase-white whatwedo-name-text"
@@ -207,9 +217,9 @@
           <li class="whatwedo-list">
             <a href="#"
               ><img
+                class="img"
                 src="./images/lookatthepalette.jpg"
                 alt="Смотрит на цветовую палитру"
-                width="370"
             /></a>
             <div
               class="whatwedo-name-position heading-uppercase heading-uppercase-white whatwedo-name-text"
@@ -227,9 +237,9 @@
             <li class="ourteam-back">
               <a href="#"
                 ><img
+                  class="img"
                   src="./images/our-team/igor.jpg"
                   alt="фото Игоря Демьяненко"
-                  width="270px"
               /></a>
               <h3 class="heading-team">Игорь Демьяненко</h3>
               <p class="desc">Product Designer</p>
@@ -267,9 +277,9 @@
             <li class="ourteam-back">
               <a href=""
                 ><img
+                  class="img"
                   src="./images/our-team/olga.jpg"
                   alt="фото Ольги Репиной"
-                  width="270px"
               /></a>
               <h3 class="heading-team">Ольга Репина</h3>
               <p class="desc">Frontend Developer</p>
@@ -307,9 +317,9 @@
             <li class="ourteam-back">
               <a href=""
                 ><img
+                  class="img"
                   src="./images/our-team/nikolay.jpg"
                   alt="фото Николая Тарасова"
-                  width="270px"
               /></a>
               <h3 class="heading-team">Николай Тарасов</h3>
               <p class="desc">Marketing</p>
@@ -347,9 +357,9 @@
             <li class="ourteam-back">
               <a href="#"
                 ><img
+                  class="img"
                   src="./images/our-team/mickael.jpg"
                   alt="фото Михаила Ермакова"
-                  width="270px"
               /></a>
               <h3 class="heading-team">Михаил Ермаков</h3>
               <p class="desc">UI Designer</p>
