--- a/portfolio.html
+++ b/portfolio.html
@@ -72,31 +72,41 @@
             </ul>
           </nav>
 
-          <ul class="contacts list">
-            <li class="contacts-li">
-              <a href="mailto:info@devstudio.com" class="link contacts-position"
-                ><svg class="icon-contacts" width="16" height="12">
-                  <use href="./images/svg/sprite.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts-li">
-              <a href="tel:+380961111111" class="link blue contacts-position"
-                ><svg class="icon-contacts" width="10" height="16">
-                  <use href="./images/svg/sprite.svg#icon-phone"></use>
-                </svg>
-                +38 096 111 11 11</a
-              >
-            </li>
-          </ul>
+          <div class="mobile-end-window">
+            <ul class="contacts list">
+              <li class="contacts-li">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="link contacts-position"
+                  ><svg class="icon-contacts" width="16" height="12">
+                    <use href="./images/svg/sprite.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts-li">
+                <a href="tel:+380961111111" class="link blue contacts-position"
+                  ><svg class="icon-contacts" width="10" height="16">
+                    <use href="./images/svg/sprite.svg#icon-phone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
 
-          <ul class="header-mobile-social">
-            <li><a href="#"></a>Instagram</li>
-            <li><a href="#"></a>Twitter</li>
-            <li><a href="#"></a>Facebook</li>
-            <li><a href="#"></a>LinkedIn</li>
-          </ul>
+            <ul class="list header-mobile-social header-mobile-social-text">
+              <li class="header-mobile-social-list">
+                <a href="#"></a>Instagram
+              </li>
+              <li class="header-mobile-social-list"><a href="#"></a>Twitter</li>
+              <li class="header-mobile-social-list">
+                <a href="#"></a>Facebook
+              </li>
+              <li class="header-mobile-social-list">
+                <a href="#"></a>LinkedIn
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -126,11 +136,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/technoduck.jpg"
                 alt="Презентация сайта компании Технокряк"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -146,11 +155,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/poster-neworleans.jpg"
                 alt="Дизайн постера для баскетбольного матча команд Нового Орлеана и Золотых Звёзд"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -168,11 +176,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/rest-seafood.jpg"
                 alt="Дизайн приложения для рыбного ресторана"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -191,11 +198,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/headphones.jpg"
                 alt="Презентация маркетинг-проекта с наушниками"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -213,11 +219,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/boxes.jpg"
                 alt="Дизайн приложения проекта Коробки"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -235,11 +240,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/web-inspiration.jpg"
                 alt="Презентация веб-сайта Вдохновение не имеет границ"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -258,11 +262,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/book.jpg"
                 alt="Дизайн издания Лимитед Едишн"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -280,11 +283,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/label-lab.jpg"
                 alt="Презентация маркетинг-проекта на бирке Лаб"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -300,11 +302,10 @@
           <li class="gallery-back">
             <div class="main-img-gallery">
               <img
+                class="img"
                 class="img-gallery"
                 src="./images/gallery/hand-app.jpg"
                 alt="Презентация приложения"
-                width="370"
-                height="294"
               />
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
