--- a/portfolio.html
+++ b/portfolio.html
@@ -135,12 +135,26 @@
         <ul class="list flex-gallery wrap">
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/technoduck.jpg"
-                alt="Презентация сайта компании Технокряк"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mtechnoduck-1x.jpg 1x,
+                    ./images/gallery-mobile/mtechnoduck-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/technoduck-1x.jpg 1x,
+                    ./images/gallery/technoduck-2x.jpg 2x
+                  "
+                  src="./images/gallery/technoduck-1x.jpg"
+                  alt="Презентация сайта компании Технокряк"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -154,12 +168,26 @@
           </li>
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/poster-neworleans.jpg"
-                alt="Дизайн постера для баскетбольного матча команд Нового Орлеана и Золотых Звёзд"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mposter-new-orleans-1x.jpg 1x,
+                    ./images/gallery-mobile/mposter-new-orleans-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/poster-new-orleans-1x.jpg 1x,
+                    ./images/gallery/poster-new-orleans-2x.jpg 2x
+                  "
+                  src="./images/gallery/poster-new-orleans-1x.jpg"
+                  alt="Дизайн постера для баскетбольного матча команд Нового Орлеана и Золотых Звёзд"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -175,12 +203,27 @@
           </li>
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/rest-seafood.jpg"
-                alt="Дизайн приложения для рыбного ресторана"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mrest-seafood-1x.jpg 1x,
+                    ./images/gallery-mobile/mrest-seafood-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/rest-seafood-1x.jpg 1x,
+                    ./images/gallery/rest-seafood-2x.jpg 2x
+                  "
+                  src="./images/gallery/rest-seafood-1x.jpg"
+                  alt="Дизайн приложения для рыбного ресторана"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -197,12 +240,26 @@
 
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/headphones.jpg"
-                alt="Презентация маркетинг-проекта с наушниками"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mheadphones-1x.jpg 1x,
+                    ./images/gallery-mobile/mheadphones-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/headphones-1x.jpg 1x,
+                    ./images/gallery/headphones-2x.jpg 2x
+                  "
+                  src="./images/gallery/headphones-1x.jpg"
+                  alt="Презентация маркетинг-проекта с наушниками"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -218,12 +275,27 @@
           </li>
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/boxes.jpg"
-                alt="Дизайн приложения проекта Коробки"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mboxes-1x.jpg 1x,
+                    ./images/gallery-mobile/mboxes-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/boxes-1x.jpg 1x,
+                    ./images/gallery/boxes-2x.jpg 2x
+                  "
+                  src="./images/gallery/boxes-1x.jpg"
+                  alt="Дизайн приложения проекта Коробки"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -239,12 +311,27 @@
           </li>
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/web-inspiration.jpg"
-                alt="Презентация веб-сайта Вдохновение не имеет границ"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mweb-inspiration-1x.jpg 1x,
+                    ./images/gallery-mobile/mweb-inspiration-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/web-inspiration-1x.jpg 1x,
+                    ./images/gallery/web-inspiration-2x.jpg 2x
+                  "
+                  src="./images/gallery/web-inspiration-1x.jpg"
+                  alt="Презентация веб-сайта Вдохновение не имеет границ"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -261,12 +348,27 @@
 
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/book.jpg"
-                alt="Дизайн издания Лимитед Едишн"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mbook-1x.jpg 1x,
+                    ./images/gallery-mobile/mbook-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/book-1x.jpg 1x,
+                    ./images/gallery/book-2x.jpg 2x
+                  "
+                  src="./images/gallery/book-1x.jpg"
+                  alt="Дизайн издания Лимитед Едишн"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -282,12 +384,27 @@
           </li>
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/label-lab.jpg"
-                alt="Презентация маркетинг-проекта на бирке Лаб"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mlabel-lab-1x.jpg 1x,
+                    ./images/gallery-mobile/mlabel-lab-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/label-lab-1x.jpg 1x,
+                    ./images/gallery/label-lab-2x.jpg 2x
+                  "
+                  src="./images/gallery/label-lab-1x.jpg"
+                  alt="Презентация маркетинг-проекта на бирке Лаб"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -301,12 +418,27 @@
           </li>
           <li class="gallery-back">
             <div class="main-img-gallery">
-              <img
-                class="img"
-                class="img-gallery"
-                src="./images/gallery/hand-app.jpg"
-                alt="Презентация приложения"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/gallery-mobile/mhand-app-1x.jpg 1x,
+                    ./images/gallery-mobile/mhand-app-2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  class="img"
+                  class="img-gallery"
+                  srcset="
+                    ./images/gallery/hand-app-1x.jpg 1x,
+                    ./images/gallery/hand-app-2x.jpg 2x
+                  "
+                  src="./images/gallery/hand-app-1x.jpg"
+                  alt="Презентация приложения"
+                />
+              </picture>
+
               <div class="overlay-gallery overlay-gallery-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
