--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@
             <a href="#"
               ><img
                 class="img"
-                src="./images/keyboards.jpg"
+                srcset="
+                  ./images/keyboards-1x.jpg 1x,
+                  ./images/keyboards-2x.jpg 2x
+                "
+                src="./images/keyboards-1x.jpg"
                 alt="Печатает на клавиатуре"
             /></a>
             <div
@@ -205,7 +209,11 @@
             <a href="#"
               ><img
                 class="img"
-                src="./images/lookatthephone.jpg"
+                srcset="
+                  ./images/lookatthephone-1x.jpg 1x,
+                  ./images/lookatthephone-2x.jpg 2x
+                "
+                src="./images/lookatthephone-1x.jpg"
                 alt="Смотрит на телефон и на экран"
             /></a>
             <div
@@ -218,7 +226,11 @@
             <a href="#"
               ><img
                 class="img"
-                src="./images/lookatthepalette.jpg"
+                srcset="
+                  ./images/lookatthepallet-1x.jpg 1x,
+                  ./images/lookatthepallet-2x.jpg 2x
+                "
+                src="./images/lookatthepallet-1x.jpg"
                 alt="Смотрит на цветовую палитру"
             /></a>
             <div
@@ -238,7 +250,11 @@
               <a href="#"
                 ><img
                   class="img"
-                  src="./images/our-team/igor.jpg"
+                  srcset="
+                    ./images/our-team/igor-1x.jpg 1x,
+                    ./images/our-team/igor-2x.jpg 2x
+                  "
+                  src="./images/our-team/igor-1x.jpg"
                   alt="фото Игоря Демьяненко"
               /></a>
               <h3 class="heading-team">Игорь Демьяненко</h3>
@@ -278,7 +294,11 @@
               <a href=""
                 ><img
                   class="img"
-                  src="./images/our-team/olga.jpg"
+                  srcset="
+                    ./images/our-team/olga-1x.jpg 1x,
+                    ./images/our-team/olga-2x.jpg 2x
+                  "
+                  src="./images/our-team/olga-1x.jpg"
                   alt="фото Ольги Репиной"
               /></a>
               <h3 class="heading-team">Ольга Репина</h3>
@@ -318,7 +338,11 @@
               <a href=""
                 ><img
                   class="img"
-                  src="./images/our-team/nikolay.jpg"
+                  srcset="
+                    ./images/our-team/nikolay-1x.jpg 1x,
+                    ./images/our-team/nikolay-2x.jpg 2x
+                  "
+                  src="./images/our-team/nikolay-1x.jpg"
                   alt="фото Николая Тарасова"
               /></a>
               <h3 class="heading-team">Николай Тарасов</h3>
@@ -358,7 +382,11 @@
               <a href="#"
                 ><img
                   class="img"
-                  src="./images/our-team/mickael.jpg"
+                  srcset="
+                    ./images/our-team/mickael-1x.jpg 1x,
+                    ./images/our-team/mickael-2x.jpg 2x
+                  "
+                  src="./images/our-team/mickael-1x.jpg"
                   alt="фото Михаила Ермакова"
               /></a>
               <h3 class="heading-team">Михаил Ермаков</h3>
